🐛  Fix : Initialized Firebase Doucment Setting

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Discord bot for accounting automation for travel",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/bot.ts",
-    "dev:server": "tsx watch src/bot.ts"
+    "start": "npm run build:live",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/bot.ts"
   },
   "author": "Oh-Kang94",
   "license": "MIT",
@@ -16,7 +16,10 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.0.2",
     "firebase-admin": "^13.0.1",
-    "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2"
   }
 }
